--- a/templates/discover.html
+++ b/templates/discover.html
@@ -7,7 +7,9 @@
     <title>SkillHub | Home</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
-
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-cookie/1.4.1/jquery.cookie.js"></script>
+    
     <style>
         /* Navbar Start */
         #navbar {
@@ -95,6 +97,13 @@
 
         /* Footer End */
     </style>
+    <script>
+        function logout() {
+            $.removeCookie('mytoken');
+            alert('You have been logged out!')
+            window.location.href = '/login'
+        }
+    </script>
 </head>
 
 <body>
@@ -121,17 +130,26 @@
                     <li class="nav-item">
                         <a class="nav-link active" href="/discover">Discover</a>
                     </li>
+                    {% if logged_in %}
                     <li class="nav-item">
                         <a class="nav-link" href="/mycourse">My Course</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="/cekpembayaran">Cek Pembayaran</a>
                     </li>
+                    {% endif %}
                 </ul>
+                {% if not logged_in %}
                 <div class="d-lg-flex col-lg-3 justify-content-lg-end">
                     <a href="/register" class="btn btn-primary" id="register">Register</a>
                     <a href="/login" class="btn btn-primary" id="login">Login</a>
                 </div>
+                {% endif %}
+                {% if logged_in %}
+                <div class="d-lg-flex col-lg-3 justify-content-lg-end">
+                    <button class="btn btn-primary" id="logout" onclick="logout()">Logout</button>
+                </div>
+                {% endif %}
             </div>
         </div>
     </nav>
@@ -147,6 +165,9 @@
                         </a>
                     </div>
                 </div>
+                {% if is_admin %}
+                <button type="button" class="btn btn-primary" id="tambah">Tambah +</button>
+                {% endif %}
                 <div class="row row-cols-lg-5 row-cols-2 row-cols-md-3">
                     <div class="col" id="card">
                         <div class="text-center position-relative">
