--- a/templates/index.html
+++ b/templates/index.html
@@ -7,6 +7,8 @@
     <title>SkillHub | Home</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-cookie/1.4.1/jquery.cookie.js"></script>
 
     <style>
         /* Navbar Start */
@@ -27,7 +29,8 @@
             margin-left: 20px;
         }
 
-        #login, #register {
+        #login,
+        #register, #logout {
             margin-right: 20px;
         }
 
@@ -91,6 +94,13 @@
 
         /* Footer End */
     </style>
+    <script>
+        function logout() {
+            $.removeCookie('mytoken');
+            alert('You have been logged out!')
+            window.location.href = '/login'
+        }
+    </script>
 </head>
 
 <body>
@@ -117,17 +127,26 @@
                     <li class="nav-item">
                         <a class="nav-link" href="/discover">Discover</a>
                     </li>
+                    {% if logged_in %}
                     <li class="nav-item">
                         <a class="nav-link" href="/mycourse">My Course</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="/cekpembayaran">Cek Pembayaran</a>
                     </li>
+                    {% endif %}
                 </ul>
+                {% if not logged_in %}
                 <div class="d-lg-flex col-lg-3 justify-content-lg-end">
                     <a href="/register" class="btn btn-primary" id="register">Register</a>
                     <a href="/login" class="btn btn-primary" id="login">Login</a>
                 </div>
+                {% endif %}
+                {% if logged_in %}
+                <div class="d-lg-flex col-lg-3 justify-content-lg-end">
+                    <button class="btn btn-primary" id="logout" onclick="logout()">Logout</button>
+                </div>
+                {% endif %}
             </div>
         </div>
     </nav>
