--- a/templates/discover.html
+++ b/templates/discover.html
@@ -56,7 +56,7 @@
             margin-top: 30px;
         }
 
-        #kategori {
+        #kategori-list {
             padding: 20px;
         }
 
@@ -104,6 +104,60 @@
             alert('You have been logged out!')
             window.location.href = '/login'
         }
+
+        function add_kategori() {
+            $.ajax({
+                type: "POST",
+                url: "/add_kategori",
+                data: {
+                    kategori_give: $("#kategori").val(),
+                },
+                success: function (response) {
+                    if (response["result"] === "success") {
+                        alert("Berhasil menambahkan kategori");
+                        window.location.reload();
+                    } else {
+                        alert("Error: " + response["message"]);
+                    }
+                },
+            });
+        }
+
+        function edit_kategori(kategori_id) {
+            $.ajax({
+                type: "PUT",
+                url: "/edit_kategori/" + kategori_id,
+                data: {
+                    kategori_edit: $("#kategori_edit").val(),
+                    // Tambahkan data lain yang perlu diupdate
+                },
+
+                success: function (response) {
+                    if (response["result"] === "success") {
+                        alert("Berhasil mengedit kategori");
+                        window.location.reload();
+                    } else {
+                        alert("Error: " + response["message"]);
+                    }
+                },
+            });
+        }
+
+        function delete_kategori(kategori_id) {
+            $.ajax({
+                type: "DELETE",
+                url: "/delete_kategori/" + kategori_id,
+                success: function (response) {
+                    if (response["result"] === "success") {
+                        alert("Berhasil menghapus kategori");
+                        window.location.reload();
+                    } else {
+                        alert("Error: " + response["message"]);
+                    }
+                },
+            });
+        }
+
     </script>
 </head>
 
@@ -158,7 +212,7 @@
 
     <div class="container">
         <div class="row">
-            <div class="col" id="kategori">
+            <div class="col" id="kategori-list">
                 <div class="d-flex flex-row mb-3">
                     <div class="p-2">
                         <a href="/discover" class="text-decoration-none custom-text-color">
@@ -167,34 +221,95 @@
                     </div>
                 </div>
                 {% if is_admin %}
-                <button type="button" class="btn btn-primary" id="tambah">Tambah +</button>
+                <!-- Button trigger modal -->
+                <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModal1"
+                    id="tambah">
+                    Tambah Kategori +
+                </button>
+
+                <!-- Modal -->
+                <div class="modal fade" id="exampleModal1" tabindex="-1" aria-labelledby="exampleModalLabel"
+                    aria-hidden="true">
+                    <div class="modal-dialog">
+                        <div class="modal-content">
+                            <div class="modal-header">
+                                <h1 class="modal-title fs-5" id="exampleModalLabel">Tambah Kategori</h1>
+                                <button type="button" class="btn-close" data-bs-dismiss="modal"
+                                    aria-label="Close"></button>
+                            </div>
+                            <div class="modal-body">
+                                <div class="mb-3">
+                                    <label for="" class="form-label">Kategori</label>
+                                    <input type="text" class="form-control" id="kategori" required="">
+                                </div>
+                                <div class="mb-3">
+                                    <label for="" class="form-label">Gambar</label>
+                                    <input type="file" class="form-control" id="gambar" required="">
+                                </div>
+                            </div>
+                            <div class="modal-footer">
+                                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
+                                <button type="button" class="btn btn-primary"
+                                    onclick="add_kategori()">Tambahkan</button>
+                            </div>
+                        </div>
+                    </div>
+                </div>
                 {% endif %}
                 <div class="row row-cols-lg-5 row-cols-2 row-cols-md-3">
+                    {% for kategori in kategori_list %}
                     <div class="col" id="card">
                         <div class="text-center position-relative">
                             <a href="#!"><img src="/static/bg-navbar.jpg" alt="Grocery Ecommerce Template"
                                     class="mb-3 img-fluid"></a>
                         </div>
-                        <h5>Web Development</h5>
+                        <h5>{{ kategori.kategori }}</h5>
                         <div class="d-flex justify-content-lg-end">
-                            <a href="/listcourse">
-                                <button type="button" class="btn btn-primary" id="button">Detail</button>
-                            </a>
-                        </div>
-                    </div>
-                    <div class="col" id="card">
-                        <div class="text-center position-relative">
-                            <a href="#!"><img src="/static/bg-navbar.jpg" alt="Grocery Ecommerce Template"
-                                    class="mb-3 img-fluid"></a>
-                        </div>
-                        <h5>Mobile Development</h5>
-                        <div class="d-flex justify-content-lg-end">
-                            <a href="/listcourse">
-                                <button type="button" class="btn btn-primary" id="button">Detail</button>
-                            </a>
+                            {% if is_admin %}
+                            <!-- Button trigger modal -->
+                            <button type="button" class="btn btn-primary" data-bs-toggle="modal"
+                                data-bs-target="#exampleModal2" id="button">
+                                Edit
+                            </button>
 
+                            <!-- Modal -->
+                            <div class="modal fade" id="exampleModal2" tabindex="-1" aria-labelledby="exampleModalLabel"
+                                aria-hidden="true">
+                                <div class="modal-dialog">
+                                    <div class="modal-content">
+                                        <div class="modal-header">
+                                            <h1 class="modal-title fs-5" id="exampleModalLabel">Edit Kategori</h1>
+                                            <button type="button" class="btn-close" data-bs-dismiss="modal"
+                                                aria-label="Close"></button>
+                                        </div>
+                                        <div class="modal-body">
+                                            <div class="mb-3">
+                                                <label for="" class="form-label">Kategori</label>
+                                                <input type="text" class="form-control" id="kategori_edit" required="">
+                                            </div>
+                                            <div class="mb-3">
+                                                <label for="" class="form-label">Gambar</label>
+                                                <input type="file" class="form-control" id="gambar_edit" required="">
+                                            </div>
+                                        </div>
+                                        <div class="modal-footer">
+                                            <button type="button" class="btn btn-secondary"
+                                                data-bs-dismiss="modal">Cancel</button>
+                                            <button type="button" class="btn btn-primary"
+                                                onclick="edit_kategori('{{ kategori._id }}')">Edit</button>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                            <button type="button" class="btn btn-primary" id="button"
+                                onclick="delete_kategori('{{ kategori._id }}')">Delete</button>
+                            {% endif %}
+                            <a href="/listcourse">
+                                <button type="button" class="btn btn-primary" id="button">Detail</button>
+                            </a>
                         </div>
                     </div>
+                    {% endfor %}
                 </div>
             </div>
         </div>
