--- a/templates/discover.html
+++ b/templates/discover.html
@@ -30,7 +30,7 @@
         }
 
         #login,
-        #register {
+        #register, #logout {
             margin-right: 20px;
         }
 
@@ -56,7 +56,7 @@
             margin-top: 30px;
         }
 
-        #kategori-list {
+        #course-list {
             padding: 20px;
         }
 
@@ -71,6 +71,11 @@
             margin-left: 25px;
             margin-right: 10px;
             margin-top: 10px;
+        }
+
+        .img-fluid {
+            height: 120px;
+            width: 100%;  
         }
 
         #tambah {
@@ -105,16 +110,20 @@
             window.location.href = '/login'
         }
 
-        function add_kategori() {
+        function add_course() {
+            var formData = new FormData();
+            formData.append('course_give', $("#course").val());
+            formData.append('image_give', $('#image')[0].files[0]);
+
             $.ajax({
                 type: "POST",
-                url: "/add_kategori",
-                data: {
-                    kategori_give: $("#kategori").val(),
-                },
+                url: "/add_course",
+                data: formData,
+                processData: false, // important
+                contentType: false, // important
                 success: function (response) {
                     if (response["result"] === "success") {
-                        alert("Berhasil menambahkan kategori");
+                        alert("Berhasil menambahkan course");
                         window.location.reload();
                     } else {
                         alert("Error: " + response["message"]);
@@ -123,18 +132,19 @@
             });
         }
 
-        function edit_kategori(kategori_id) {
+
+        function edit_course(course_id) {
             $.ajax({
                 type: "PUT",
-                url: "/edit_kategori/" + kategori_id,
+                url: "/edit_course/" + course_id,
                 data: {
-                    kategori_edit: $("#kategori_edit").val(),
+                    course_edit: $("#course_edit").val(),
                     // Tambahkan data lain yang perlu diupdate
                 },
 
                 success: function (response) {
                     if (response["result"] === "success") {
-                        alert("Berhasil mengedit kategori");
+                        alert("Berhasil mengedit course");
                         window.location.reload();
                     } else {
                         alert("Error: " + response["message"]);
@@ -143,13 +153,13 @@
             });
         }
 
-        function delete_kategori(kategori_id) {
+        function delete_course(course_id) {
             $.ajax({
                 type: "DELETE",
-                url: "/delete_kategori/" + kategori_id,
+                url: "/delete_course/" + course_id,
                 success: function (response) {
                     if (response["result"] === "success") {
-                        alert("Berhasil menghapus kategori");
+                        alert("Berhasil menghapus course");
                         window.location.reload();
                     } else {
                         alert("Error: " + response["message"]);
@@ -212,11 +222,11 @@
 
     <div class="container">
         <div class="row">
-            <div class="col" id="kategori-list">
+            <div class="col" id="course-list">
                 <div class="d-flex flex-row mb-3">
                     <div class="p-2">
                         <a href="/discover" class="text-decoration-none custom-text-color">
-                            <h3>Daftar Kategori</h3>
+                            <h3>Daftar Course</h3>
                         </a>
                     </div>
                 </div>
@@ -224,7 +234,7 @@
                 <!-- Button trigger modal -->
                 <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModal1"
                     id="tambah">
-                    Tambah Kategori +
+                    Tambah Course +
                 </button>
 
                 <!-- Modal -->
@@ -233,37 +243,36 @@
                     <div class="modal-dialog">
                         <div class="modal-content">
                             <div class="modal-header">
-                                <h1 class="modal-title fs-5" id="exampleModalLabel">Tambah Kategori</h1>
+                                <h1 class="modal-title fs-5" id="exampleModalLabel">Tambah Course</h1>
                                 <button type="button" class="btn-close" data-bs-dismiss="modal"
                                     aria-label="Close"></button>
                             </div>
                             <div class="modal-body">
                                 <div class="mb-3">
-                                    <label for="" class="form-label">Kategori</label>
-                                    <input type="text" class="form-control" id="kategori" required="">
+                                    <label for="" class="form-label">Course</label>
+                                    <input type="text" class="form-control" id="course" required="">
                                 </div>
                                 <div class="mb-3">
                                     <label for="" class="form-label">Gambar</label>
-                                    <input type="file" class="form-control" id="gambar" required="">
+                                    <input type="file" class="form-control" id="image" required="">
                                 </div>
                             </div>
                             <div class="modal-footer">
                                 <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
-                                <button type="button" class="btn btn-primary"
-                                    onclick="add_kategori()">Tambahkan</button>
+                                <button type="button" class="btn btn-primary" onclick="add_course()">Tambahkan</button>
                             </div>
                         </div>
                     </div>
                 </div>
                 {% endif %}
                 <div class="row row-cols-lg-5 row-cols-2 row-cols-md-3">
-                    {% for kategori in kategori_list %}
+                    {% for course in course_list %}
                     <div class="col" id="card">
                         <div class="text-center position-relative">
-                            <a href="#!"><img src="/static/bg-navbar.jpg" alt="Grocery Ecommerce Template"
+                            <a href="#!"><img src="{{course.image}}" alt="Grocery Ecommerce Template"
                                     class="mb-3 img-fluid"></a>
                         </div>
-                        <h5>{{ kategori.kategori }}</h5>
+                        <h5>{{ course.course }}</h5>
                         <div class="d-flex justify-content-lg-end">
                             {% if is_admin %}
                             <!-- Button trigger modal -->
@@ -278,31 +287,31 @@
                                 <div class="modal-dialog">
                                     <div class="modal-content">
                                         <div class="modal-header">
-                                            <h1 class="modal-title fs-5" id="exampleModalLabel">Edit Kategori</h1>
+                                            <h1 class="modal-title fs-5" id="exampleModalLabel">Edit Course</h1>
                                             <button type="button" class="btn-close" data-bs-dismiss="modal"
                                                 aria-label="Close"></button>
                                         </div>
                                         <div class="modal-body">
                                             <div class="mb-3">
-                                                <label for="" class="form-label">Kategori</label>
-                                                <input type="text" class="form-control" id="kategori_edit" required="">
+                                                <label for="" class="form-label">Course</label>
+                                                <input type="text" class="form-control" id="course_edit" required="">
                                             </div>
                                             <div class="mb-3">
                                                 <label for="" class="form-label">Gambar</label>
-                                                <input type="file" class="form-control" id="gambar_edit" required="">
+                                                <input type="file" class="form-control" id="image_edit" required="">
                                             </div>
                                         </div>
                                         <div class="modal-footer">
                                             <button type="button" class="btn btn-secondary"
                                                 data-bs-dismiss="modal">Cancel</button>
                                             <button type="button" class="btn btn-primary"
-                                                onclick="edit_kategori('{{ kategori._id }}')">Edit</button>
+                                                onclick="edit_course('{{ course._id }}')">Edit</button>
                                         </div>
                                     </div>
                                 </div>
                             </div>
                             <button type="button" class="btn btn-primary" id="button"
-                                onclick="delete_kategori('{{ kategori._id }}')">Delete</button>
+                                onclick="delete_course('{{ course._id }}')">Delete</button>
                             {% endif %}
                             <a href="/listcourse">
                                 <button type="button" class="btn btn-primary" id="button">Detail</button>
