--- a/templates/index.html
+++ b/templates/index.html
@@ -164,26 +164,18 @@
                     <h3>Kategori Course</h3>
                 </div>
                 <div class="row row-cols-lg-5 row-cols-2 row-cols-md-3">
-                    <div class="col" id="card">
-                        <div class="text-center position-relative">
-                            <a href="#!"><img src="static/bg-navbar.jpg" alt="Grocery Ecommerce Template"
-                                    class="mb-3 img-fluid"></a>
+                    {% for course in course_list %}
+                        <div class="col" id="card">
+                            <div class="text-center position-relative">
+                                <a href="#!"><img src="{{course.image}}" alt="Grocery Ecommerce Template"
+                                        class="mb-3 img-fluid" style="height: 120px; width: 100%; "></a>
+                            </div>
+                            <h5>{{ course.course }}</h5>
+                            <div class="d-flex justify-content-lg-end">
+                                <button type="button" class="btn btn-primary" id="button">Detail</button>
+                            </div>
                         </div>
-                        <h5>Web Development</h5>
-                        <div class="d-flex justify-content-lg-end">
-                            <button type="button" class="btn btn-primary" id="button">Detail</button>
-                        </div>
-                    </div>
-                    <div class="col" id="card">
-                        <div class="text-center position-relative">
-                            <a href="#!"><img src="static/bg-navbar.jpg" alt="Grocery Ecommerce Template"
-                                    class="mb-3 img-fluid"></a>
-                        </div>
-                        <h5>Mobile Development</h5>
-                        <div class="d-flex justify-content-lg-end">
-                            <button type="button" class="btn btn-primary" id="button">Detail</button>
-                        </div>
-                    </div>
+                    {% endfor %}
                 </div>
             </div>
         </div>
