--- a/templates/cekpembayaran.html
+++ b/templates/cekpembayaran.html
@@ -107,6 +107,29 @@
             alert('You have been logged out!')
             window.location.href = '/login'
         }
+
+        function pembayaran() {
+            var formData = new FormData();
+            formData.append('image_give', $('#imagesubmit')[0].files[0]);
+            formData.append('id_give', "{{user_info.id}}");
+            formData.append('status_give', "pending");
+
+            $.ajax({
+                type: "POST",
+                url: "/pembayaran",
+                data: formData,
+                processData: false, // important
+                contentType: false, // important
+                success: function (response) {
+                    if (response["result"] === "success") {
+                        alert("Berhasil mengirim bukti pembayaran");
+                        window.location.reload();
+                    } else {
+                        alert("Error: " + response["message"]);
+                    }
+                },
+            });
+        }
     </script>
 </head>
 
@@ -149,6 +172,7 @@
                 {% endif %}
                 {% if logged_in %}
                 <div class="d-lg-flex col-lg-3 justify-content-lg-end">
+                    <p>{{user_info.role}}</p>
                     <button class="btn btn-primary" id="logout" onclick="logout()">Logout</button>
                 </div>
                 {% endif %}
@@ -162,7 +186,7 @@
             {% if is_admin %}
             <div class="row" id="card">
                 <div class="d-flex">
-                    <h5>HTML Course <span class="badge rounded-pill text-bg-warning" id="badge">Pending</span></h5>
+                    <h5>Pembayaran <span class="badge rounded-pill text-bg-warning" id="badge">Pending</span></h5>
                 </div>
                 <p>08 Desember 2023</p>
                 <img src="/static/bg-navbar.jpg" alt="Bukti Pembayaran" id="bukti-pembayaran"
@@ -190,26 +214,13 @@
             {% if not is_admin %}
             <div class="row" id="card">
                 <div class="d-flex">
-                    <h5>HTML Course <span class="badge rounded-pill text-bg-warning" id="badge">Pending</span></h5>
+                    <h5>Akses Course (Lifetime) <span class="badge rounded-pill text-bg-warning" id="badge">Pending</span></h5>
                 </div>
-                <p>08 Desember 2023</p>
                 <p id="pembayaran">Total Pembayaran : Rp. 100.000</p>
                 <div class="d-flex justify-content-end">
                     <label for="formFile" class="form-label"></label>
-                    <input class="form-control" type="file" id="formFile">
-                    <button type="button" class="btn btn-primary" id="submit">Submit</button>
-                </div>
-            </div>
-            <div class="row" id="card">
-                <div class="d-flex">
-                    <h5>CSS Course <span class="badge rounded-pill text-bg-warning" id="badge">Pending</span></h5>
-                </div>
-                <p>08 Desember 2023</p>
-                <p id="pembayaran">Total Pembayaran : Rp. 100.000</p>
-                <div class="d-flex justify-content-end">
-                    <label for="formFile" class="form-label"></label>
-                    <input class="form-control" type="file" id="formFile">
-                    <button type="button" class="btn btn-primary" id="submit">Submit</button>
+                    <input class="form-control" type="file" id="imagesubmit">
+                    <button type="button" class="btn btn-primary" id="submit" onclick="pembayaran()">Submit</button>
                 </div>
             </div>
             {% endif %}
