--- a/templates/cekpembayaran.html
+++ b/templates/cekpembayaran.html
@@ -103,7 +103,7 @@
     </style>
     <script>
         function logout() {
-            $.removeCookie('mytoken');
+            $.removeCookie('mytoken', { path: "/"});
             alert('You have been logged out!')
             window.location.href = '/login'
         }
@@ -161,7 +161,7 @@
                         <a class="nav-link" href="/mycourse">My Course</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link active" href="/cekpembayaran">Cek Pembayaran</a>
+                        <a class="nav-link active" href="/cekpembayaran/{{user_info.id}}">Cek Pembayaran</a>
                     </li>
                 </ul>
                 {% if not logged_in %}
