--- a/templates/index.html
+++ b/templates/index.html
@@ -132,7 +132,7 @@
                         <a class="nav-link" href="/mycourse">My Course</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="/cekpembayaran">Cek Pembayaran</a>
+                        <a class="nav-link" href="/cekpembayaran/{{user_info.id}}">Cek Pembayaran</a>
                     </li>
                     {% endif %}
                 </ul>
