--- a/templates/mycourse.html
+++ b/templates/mycourse.html
@@ -137,7 +137,7 @@
                         <a class="nav-link active" href="/mycourse">My Course</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="/cekpembayaran">Cek Pembayaran</a>
+                        <a class="nav-link" href="/cekpembayaran/{{user_info.id}}">Cek Pembayaran</a>
                     </li>
                 </ul>
                 {% if not logged_in %}
