in progress pembayaran

--- a/templates/previewcourse.html
+++ b/templates/previewcourse.html
@@ -111,7 +111,7 @@
                         <a class="nav-link" href="/mycourse">My Course</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="/cekpembayaran">Cek Pembayaran</a>
+                        <a class="nav-link" href="/cekpembayaran/{{user_info.id}}">Cek Pembayaran</a>
                     </li>
                 </ul>
                 {% if not logged_in %}
